@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2013-07-01 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Fix for internal services so that the terminate function is always called
+
 2013-06-29 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Make the CloudI Service API automatically discover its functions
